--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -13,6 +13,10 @@
     width: 90%;
     height: auto;
 }
+.mat-icon-svg-m {
+    width: 40%;
+    height: auto;
+}
 .md-icon-ux {
     width: 165px;
 }
@@ -32,3 +36,23 @@
         font-size: 160px;
     }
 }
+
+
+// Rules for sizing the icon.
+.material-icons.md-18 { font-size: 18px; height:18px; width: 18px }
+.material-icons.md-24 { font-size: 24px; height:24px; width: 24px }
+.material-icons.md-36 { font-size: 36px; height:36px; width: 36px }
+.material-icons.md-48 { font-size: 48px; height:48px; width: 48px }
+.material-icons.md-300 { font-size: 300px; height:300px; width: 300px }
+
+// Rules for using icons as black on a light background.
+.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
+.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
+
+// Rules for using icons as white on a dark background.
+.material-icons.md-light { color: rgba(255, 255, 255, 1); }
+.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+
+// Rules for using icons as orange.
+.material-icons.orange600 { color: #FB8C00; }
+.material-icons.blue600 { color: #0058FB; }
