--- a/src/platform/markdown/markdown.component.scss
+++ b/src/platform/markdown/markdown.component.scss
@@ -166,7 +166,7 @@
 
   ol ol,
   ul ol {
-    list-style-type: lower-roman;
+    list-style-type: Helvetica, arial,lower-roman;
   }
 
   ul ul ol,
