--- a/src/app/components/home/home.component.backup.html
+++ b/src/app/components/home/home.component.backup.html
@@ -20,6 +20,7 @@
             <br><br> The approach is supported via product UDI Studio. The UDI studio is an installable application based
             on Java includes a few plugins which support the model driven and templates methodology.
           </h2>
+
           <div class="push-top-xl" hide-xs></div>
         </div>
       </div>
@@ -185,7 +186,7 @@
     </div>
   </section>
 
-<!-- MJA - sekce navigacniho baru s malz=ymi ikonami-->
+<!-- MJA - sekce navigacniho baru s malymi ikonami-->
   <md-toolbar color="primary">
  
   </md-toolbar>
