--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
             [dir]="dir"
             [mode]="(media.registerQuery('gt-md') | async) ? 'side' : 'over'"
             [sidenavWidth]="(media.registerQuery('gt-md') | async) ? '257px' : '320px'">
-  <td-navigation-drawer sidenavTitle="Covalent" logo="assets:teradata" navigationRoute="/" flex color="primary">
+  <td-navigation-drawer sidenavTitle="UDI Studio" logo="assets:teradata" navigationRoute="/" flex color="primary">
     <md-nav-list flex>
       <a md-list-item
           (click)="!media.query('gt-md') && layout.close()"
