prejmenovani udicontact na pdccontact

--- a/src/app/components/pdccontact/pdccontact.component.html
+++ b/src/app/components/pdccontact/pdccontact.component.html
@@ -1,4 +1,4 @@
-<td-layout-nav logo="assets:teradata" toolbarTitle="UDI Studio - Contacts" navigationRoute="/">
+<td-layout-nav logo="assets:teradata" toolbarTitle="PDC - Contacts" navigationRoute="/">
     <button md-icon-button td-menu-button tdLayoutToggle>
         <md-icon>menu</md-icon>
     </button>
@@ -21,16 +21,22 @@
           <h3 class="md-display-1 tc-blue-A700 push-top-xs push-bottom-sm">Contacts</h3>
           <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
             <br><b>Product Leader and Support</b>
-            <br>contact : Martin Pies
-            <br>phone   : +420 608 040 928
+            <br>contact : Milan Budka
+            <br>phone   : +420 601 321 735
             <br>email   : <a href="mailto:martin.pies@teradata.com">martin.pies@teradata.com</a>
             </h4>
             <br>
-            <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+       <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
               <br><b>Product Team Member</b>
-              <br>contact : Milan Budka
-              <br>phone   : +420 601 321 735
-              <br>email   : <a href="mailto:milan.budka@teradata.com">milan.budka@teradata.com</a>
+              <br>contact : Tomáš Ploužek
+              <br>phone   : +420 603 744 951
+              <br>email   : <a href="mailto:tomas.plouzek@teradata.com">tomas.plouzek@teradata.com</a>
+              </h4>
+       <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+              <br><b>Product Team Member</b>
+              <br>contact : Petr Štefánek
+              <br>phone   : +420 602 117 900
+              <br>email   : <a href="mailto:petr.stefanek@teradata.com">petr.stefanek@teradata.com</a>
               </h4>
               <br>
               <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
