vyrazeni Gitter Chat a Feature Request

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -252,10 +252,11 @@
     <div layout-gt-xs="row" layout-align="start center">
       <div class="md-caption">Copyright &copy; 2017 Teradata. All rights reserved</div>
       <span flex></span>
-      <div layout-gt-xs="row">
+<!--  <div layout-gt-xs="row">
         <a href="https://gitter.im/Teradata/covalent" target="_blank" md-button class="text-upper">Gitter Chat</a>
         <a href="https://github.com/teradata/covalent/issues" target="_blank" md-button class="text-upper">Feature Request</a>
       </div>
+      -->      
     </div>
   </td-layout-footer>
 </td-layout-nav>
