PDC use cases, PDC architecture, PDC contacts

--- a/src/app/components/pdccontact/pdccontact.component.html
+++ b/src/app/components/pdccontact/pdccontact.component.html
@@ -2,15 +2,15 @@
     <button md-icon-button td-menu-button tdLayoutToggle>
         <md-icon>menu</md-icon>
     </button>
-    <td-toolbar td-toolbar-content flex layout="row"></td-toolbar>
-      <!--MJA - sekce pauza-->
+    <!-- toolbar  <td-toolbar td-toolbar-content flex layout="row"></td-toolbar>
+      
       <section class="bgc-blue-grey-500">
             <div layout="row">
               <div flex flex-order-xs="2" class="pad" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xs', 'pad-left-xl']">
               </div>
             </div>
           </section>
-          <!--MJA - konec sekce pauza-->
+   -->
 
   <!--MJA - sekce pro CODE GENERATOR UDI Studia - obrazek vlevo, text vpravo-->
   <section class="bgc-blue-grey-100">
