--- a/src/app/components/pdcarchitecture/pdcarchitecture.component.html
+++ b/src/app/components/pdcarchitecture/pdcarchitecture.component.html
@@ -106,7 +106,7 @@
 					* Controlling
 						* Scheduler
 						* Application access right
-						* Job’s processing
+						* Job&lsquo;s processing
 					* Multiple Engine support
 					* Access permissions
 					* Metadata change
