oprava preklep, oprava email

--- a/src/app/components/pdcarchitecture/pdcarchitecture.component.html
+++ b/src/app/components/pdcarchitecture/pdcarchitecture.component.html
@@ -85,7 +85,7 @@
 						 * Locks
 						 * Parallelism control
 						 * Calendar
-					 * Written in Orale PL/SQL
+					 * Written in Oracle PL/SQL
                   </td-markdown>
                 </div>
               </div>
