--- a/src/app/components/pdccontact/pdccontact.component.html
+++ b/src/app/components/pdccontact/pdccontact.component.html
@@ -23,7 +23,7 @@
             <br><b>Product Leader and Support</b>
             <br>contact : Milan Budka
             <br>phone   : +420 601 321 735
-            <br>email   : <a href="mailto:martin.pies@teradata.com">martin.pies@teradata.com</a>
+            <br>email   : <a href="mailto:milan.budka@teradata.com">martin.pies@teradata.com</a>
             </h4>
             <br>
        <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
