Oprava postranni obrazky mobilni verze

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -42,16 +42,10 @@
 
   
         <div flex="40" flex-xs="20" flex-order-xs="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-right-xl']">
-          <!--   <img src="..\app\assets\images\udi_cg.png">-->
-          <!--<br>
-            <img src="..\app\assets\images\udi_ia.png">-->
           <div layout="row" layout-align="end start">
-            <h1 class="md-display-1 tc-blue-grey-50 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['md-headline']">
-              <br>
-            </h1>
+	          <!-- Icon APP-->
+          <md-icon class="md-300 orange600">apps</md-icon>
           </div>
-          <!-- Icon APP-->
-          <i class="material-icons md-300 orange600">apps</i>
         </div>
       </div>
     </section>
