--- a/src/app/components/pdcusecases/pdcusecases.component.html
+++ b/src/app/components/pdcusecases/pdcusecases.component.html
@@ -31,10 +31,8 @@
         </div>
         <div class="push-bottom-xl" hide-xs></div>
       </div>
-      <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-left-xl']">
-        <!--<md-icon class="mat-icon-svg-xxl fill-green-A700" svgIcon="assets:material-outline" tdMediaToggle="xs" [mediaClasses]="['push-top', 'push-left']"></md-icon>-->
-        <div class="push-top-xxl" hide-xs></div>
-        <div layout="row" layout-align="end start">
+     <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-left-xl']">
+        <div layout="row" layout-align="end start" style="position:relative;top: 20px;">
           <md-icon class="md-300 blue600">library_books</md-icon>
         </div>
       </div>
