--- a/src/app/components/pdcarchitecture/pdcarchitecture.component.html
+++ b/src/app/components/pdcarchitecture/pdcarchitecture.component.html
@@ -31,9 +31,9 @@
           <img src="app\assets\images\pdc_architecture_black.png" width="60%" height="60%" />
         </div>
       </div>
-      <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xxl', 'pad-bottom-xxl', 'pad-left-xxl']">
-        <div layout="row" layout-align="end start" tdMediaToggle="xs" [mediaClasses]="['push-top', 'push-left']">
-          <md-icon class="md-300 orange600">settings_overscan</md-icon>
+     <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-left-xl']">
+        <div layout="row" layout-align="end start" style="position:relative;top: 20px;">
+           <md-icon class="md-300 orange600">settings_overscan</md-icon>
         </div>
       </div>
     </div>
