uprava pro mobilni verzi - obrazky zmizi v leve casti

--- a/src/app/components/udicg/udicg.component.html
+++ b/src/app/components/udicg/udicg.component.html
@@ -38,13 +38,9 @@
         </div>
         <div class="push-bottom-xl" hide-xs></div>
       </div>
-      <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-left-xl']">
-        <!--<md-icon class="mat-icon-svg-xxl fill-green-A700" svgIcon="assets:material-outline" tdMediaToggle="xs" [mediaClasses]="['push-top', 'push-left']"></md-icon>-->
-        <div class="push-top-xxl" hide-xs></div>
-        <div layout-align="start center">
-          <h2 class="md-display-1 tc-red-500 push-top-xs push-bottom-sm"> </h2>
-          <!--<br><img src="..\app\assets\images\udi_cg.png">-->
-          <i class="material-icons md-300 blue600">settings</i>
+      <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xxl', 'pad-bottom-xxl', 'pad-left-xxl']">
+        <div layout="row" layout-align="end start" tdMediaToggle="xs" [mediaClasses]="['push-top', 'push-left']">
+          <md-icon class="md-300 blue600">settings</md-icon>
         </div>
       </div>
     </div>
