--- a/src/app/components/udiia/udiia.component.html
+++ b/src/app/components/udiia/udiia.component.html
@@ -32,13 +32,11 @@
             </div>
             <div class="push-bottom-xl" hide-xs></div>
           </div>
-          <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-left-xl']">
-            <div class="push-top-xxl" hide-xs></div>
-            <div layout-align="start center">
-              <h2 class="md-display-1 tc-red-500 push-top-xs push-bottom-sm"> </h2>
-              <i class="material-icons md-300 blue600">storage</i>
-            </div>
-          </div>
+	      <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xxl', 'pad-bottom-xxl', 'pad-left-xxl']">
+	        <div layout="row" layout-align="end start" tdMediaToggle="xs" [mediaClasses]="['push-top', 'push-left']">
+	          <md-icon class="md-300 blue600">storage</md-icon>
+	        </div>
+	      </div>
         </div>
       </section>
       <!--MJA - konec sekce pro IMPACT ANALYSER UDI Studia - obrazek vlevo, text vpravo-->
