--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -41,17 +41,10 @@
 
   
         <div flex="40" flex-xs="20" flex-order-xs="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-right-xl']">
-          <!--   <img src="..\app\assets\images\udi_cg.png">-->
-          <!--<br>
-            <img src="..\app\assets\images\udi_ia.png">-->
           <div layout="row" layout-align="end start">
-            <h1 class="md-display-1 tc-blue-grey-50 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['md-headline']">
-              <br>
-            </h1>
+				<md-icon class="md-300 orange600">apps</md-icon>
           </div>
-          <!-- Icon APP-->
-          <i class="material-icons md-300 orange600">apps</i>
-        </div>
+		</div>
       </div>
     </section>
 
@@ -238,12 +231,11 @@
           <img src="..\app\assets\images\udi_architecture_black.png" width="90%" height="90%" />
         </div>
       </div>
-      <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-left-xl']">
-        <div layout-align="start center">
-          <h2 class="md-display-1 tc-red-500 push-top-xs push-bottom-sm"> </h2>
-          <i class="material-icons md-300 orange600">settings_overscan</i>
-        </div>
-      </div>
+        <div flex="40" flex-xs="20" flex-order-xs="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-right-xl']">
+          <div layout="row" layout-align="end start">
+				<md-icon class="md-300 orange600">settings_overscan</md-icon>
+          </div>
+		</div>      
     </div>
   </section>
   <!--MJA - konec sekce pro architeckturu UDI Studia - obrazek vlevo, text vpravo-->
@@ -355,13 +347,11 @@
         </div>
         <div class="push-bottom-xl" hide-xs></div>
       </div>
-      <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-left-xl']">
-        <div class="push-top-xxl" hide-xs></div>
-        <div layout-align="start center">
-          <h2 class="md-display-1 tc-red-500 push-top-xs push-bottom-sm"> </h2>
-          <i class="material-icons md-300 blue600">storage</i>
-        </div>
-      </div>
+        <div flex="40" flex-xs="20" flex-order-xs="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-right-xl']">
+          <div layout="row" layout-align="end start">
+				<md-icon class="md-300 blue600">storage</md-icon>
+          </div>
+		</div>            
     </div>
   </section>
   <!--MJA - konec sekce pro IMPACT ANALYSER UDI Studia - obrazek vlevo, text vpravo-->
@@ -402,15 +392,11 @@
         </div>
         <div class="push-bottom-xl" hide-xs></div>
       </div>
-      <div flex="30" flex-xs="20" flex-order="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-left-xl']">
-        <!--<md-icon class="mat-icon-svg-xxl fill-green-A700" svgIcon="assets:material-outline" tdMediaToggle="xs" [mediaClasses]="['push-top', 'push-left']"></md-icon>-->
-        <div class="push-top-xxl" hide-xs></div>
-        <div layout-align="start center">
-          <h2 class="md-display-1 tc-red-500 push-top-xs push-bottom-sm"> </h2>
-          <!--<br><img src="..\app\assets\images\udi_cg.png">-->
-          <i class="material-icons md-300 blue600">settings</i>
-        </div>
-      </div>
+        <div flex="40" flex-xs="20" flex-order-xs="1" layout-gt-xs="column" layout-align="start center" tdMediaToggle="gt-xs" [mediaClasses]="['pad-top-xl', 'pad-bottom-xl', 'pad-right-xl']">
+          <div layout="row" layout-align="end start">
+				<md-icon class="md-300 blue600">settings</md-icon>
+          </div>
+		</div>
     </div>
   </section>
   <!--MJA - konec sekce pro CODE GENERATOR UDI Studia - obrazek vlevo, text vpravo-->
