--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -4,18 +4,20 @@
 -->
 <div layout="row" layout-align="end center" flex>
     <span flex></span>
-    <nav hide show-gt-md class="text-upper text-sm" layout="row">
-      <a class="push-right text-nodecoration" [routerLink]="['/docs']" [routerLinkActive]="['active']">Docs</a>
+<!-- remove items from horizontal menu    <nav hide show-gt-md class="text-upper text-sm" layout="row">
+  <a class="push-right text-nodecoration" [routerLink]="['/docs']" [routerLinkActive]="['active']">Docs</a>
       <a class="push-right text-nodecoration" [routerLink]="['/components']" [routerLinkActive]="['active']">Components</a>
       <a class="push-right text-nodecoration" [routerLink]="['/layouts']" [routerLinkActive]="['active']">Layouts</a>
       <a class="push-right text-nodecoration" [routerLink]="['/style-guide']" [routerLinkActive]="['active']">Style Guide</a>
       <a class="push-right text-nodecoration" [routerLink]="['/templates']" [routerLinkActive]="['active']">Templates</a>
+      
     </nav>
     <button md-icon-button [mdMenuTriggerFor]="notificationsMenu">
       <td-notification-count color="accent" [notifications]="updates.length + 1">
         <md-icon>notifications</md-icon>
       </td-notification-count>
     </button>
+!-->    
     <md-menu #notificationsMenu="mdMenu">
       <td-menu>
         <div td-menu-header class="md-subhead">Updates</div>
