oprava zobrazeni textu v mobilni verzi

--- a/src/app/components/udiia/udiia.component.html
+++ b/src/app/components/udiia/udiia.component.html
@@ -18,7 +18,7 @@
             <div class="push-top-xxl" hide-xs></div>
             <div tdMediaToggle="gt-sm" [mediaClasses]="['push-lg']">
               <h2 class="md-display-1 tc-blue-A700 push-top-xs push-bottom-sm">Impact Analyser - UDI Studio plugin</h2>
-              <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+              <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['text-lg']">
                 <td-markdown>
                   * Extracts analytical metadata from various analytical and mapping documents and tools (Power Designer, Erwin, XML, Excel…)
                   * Populates shared analytical metadata repository for further usage 
