--- a/src/app/components/udiusecases/udiusecases.component.html
+++ b/src/app/components/udiusecases/udiusecases.component.html
@@ -16,10 +16,10 @@
   <section class="bgc-blue-grey-100">
     <div layout="row">
       <div flex flex-order="2" class="pad" tdMediaToggle="gt-xs" [mediaClasses]="['pad-xl']">
-        <div class="push-top-xxl" hide-xs></div>
+        <div class="push-top-xxl" tdMediaToggle="xs" [mediaClasses]="['text-lg']"></div>
         <div tdMediaToggle="gt-sm" [mediaClasses]="['push-lg']">
           <h2 class="md-display-1 tc-blue-A700 push-top-xs push-bottom-sm">UDI Studio Use Cases</h2>
-          <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+          <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['text-lg']">
             <td-markdown>
               * DevOps  process
 
