--- a/src/app/components/udicg/udicg.component.html
+++ b/src/app/components/udicg/udicg.component.html
@@ -19,7 +19,7 @@
         <div class="push-top-xxl" hide-xs></div>
         <div tdMediaToggle="gt-sm" [mediaClasses]="['push-lg']">
           <h2 class="md-display-1 tc-blue-A700 push-top-xs push-bottom-sm">Code Generator - UDI Studio plugin</h2>
-          <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+          <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['text-lg']">
             <td-markdown>
               * Automate everything 
               * Strong and customizable metadata support 
