--- a/src/app/components/udicontact/udicontact.component.html
+++ b/src/app/components/udicontact/udicontact.component.html
@@ -16,24 +16,24 @@
   <section class="bgc-blue-grey-100">
     <div layout="row">
       <div flex flex-order="2" class="pad" tdMediaToggle="gt-xs" [mediaClasses]="['pad-xl']">
-        <div class="push-top-xxl" hide-xs></div>
+        <div class="push-top-xxl" tdMediaToggle="xs" [mediaClasses]="['text-lg']"></div>
         <div tdMediaToggle="gt-sm" [mediaClasses]="['push-lg']">
           <h3 class="md-display-1 tc-blue-A700 push-top-xs push-bottom-sm">Contacts</h3>
-          <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+          <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['text-lg']">
             <br><b>Product Leader and Support</b>
             <br>contact : Martin Pies
             <br>phone   : +420 608 040 928
             <br>email   : <a href="mailto:martin.pies@teradata.com">martin.pies@teradata.com</a>
             </h4>
             <br>
-            <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+            <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['text-lg']">
               <br><b>Product Team Member</b>
               <br>contact : Milan Budka
               <br>phone   : +420 601 321 735
               <br>email   : <a href="mailto:milan.budka@teradata.com">milan.budka@teradata.com</a>
               </h4>
               <br>
-              <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+              <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['text-lg']">
                  <br><b>Product Owner</b>
                 <br>contact : Miroslav Jakoubek
                 <br>phone   : +420 602 205 958
