--- a/src/app/components/udidownload/udidownload.component.html
+++ b/src/app/components/udidownload/udidownload.component.html
@@ -19,7 +19,7 @@
         <div class="push-top-xxl" hide-xs></div>
         <div tdMediaToggle="gt-sm" [mediaClasses]="['push-lg']">
           <h2 class="md-display-1 tc-blue-A700 push-top-xs push-bottom-sm">UDI Studio download</h2>
-          <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" hide-xs>
+          <h4 class="md-headline tc-blue-grey-600 push-top-xs push-bottom-sm" tdMediaToggle="xs" [mediaClasses]="['text-lg']">
             <td-markdown>
               * The current repository of product distribution is Teradata SubVersion. The repository has got a limited access for guests and is open for customers and prospects. If you want to test the product please use contact of Product Leader and Support.
           </td-markdown>
